syntax = "proto3";

package location;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "https://github.com/vzivanovic/GOLANG_FOR_STUDENTS/proto";

message LocationUpdate {
  string username = 1;
  double latitude = 2;
  double longitude = 3;
}

message DistanceRequest {
  string username = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
}

message DistanceResponse {
  double distance = 1;
}

service LocationService {
  rpc UpdateLocation (LocationUpdate) returns (google.protobuf.Empty);
  rpc GetDistance (DistanceRequest) returns (DistanceResponse);
}